fix: 新增--dlg-btn-gap变量，用于控制底部按钮间距，间距响应视宽

--- a/packages/opendesign/src/dialog/style/media.scss
+++ b/packages/opendesign/src/dialog/style/media.scss
@@ -151,3 +151,15 @@
     }
   }
 }
+
+@include respond-to('laptop-pc_s') {
+  .o-dialog {
+    --dlg-btn-gap: 12px;
+  }
+}
+
+@include respond-to('<=pad') {
+  .o-dialog {
+    --dlg-btn-gap: 8px;
+  }
+}
