--- a/packages/opendesign/src/dialog/style/style.scss
+++ b/packages/opendesign/src/dialog/style/style.scss
@@ -77,6 +77,6 @@
 }
 .o-dlg-btn {
   + .o-dlg-btn {
-    margin-left: 16px;
+    margin-left: var(--dlg-btn-gap);
   }
 }
