--- a/packages/opendesign/src/dialog/style/var.scss
+++ b/packages/opendesign/src/dialog/style/var.scss
@@ -18,6 +18,7 @@
   --dlg-edge-gap: 32px;
   --dlg-inner-gap: 24px;
   --actions-justify: var(--dlg-actions-justify, center);
+  --dlg-btn-gap: 16px;
 }
 
 .o-dialog-auto {
